#!/usr/bin/env python3
# -*- coding: utf-8 -*-
"""
–î–∏–∞–≥–Ω–æ—Å—Ç–∏—á–µ—Å–∫–∏–π —Å–∫—Ä–∏–ø—Ç –¥–ª—è –ø—Ä–æ–≤–µ—Ä–∫–∏ –æ—Ç—Å–ª–µ–∂–∏–≤–∞–Ω–∏—è —É—Å—Ç—Ä–æ–π—Å—Ç–≤ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª–µ–π –≤ marznode
"""

import asyncio
import sys
import json
import re
from pathlib import Path

# –ù–∞—Å—Ç—Ä–æ–π–∫–∞ –∫–æ–¥–∏—Ä–æ–≤–∫–∏ –¥–ª—è Windows
if sys.platform == "win32":
    import codecs
    sys.stdout = codecs.getwriter("utf-8")(sys.stdout.detach())
    sys.stderr = codecs.getwriter("utf-8")(sys.stderr.detach())

# –¶–≤–µ—Ç–∞ –¥–ª—è –≤—ã–≤–æ–¥–∞
class Colors:
    HEADER = '\033[95m'
    OKBLUE = '\033[94m'
    OKCYAN = '\033[96m'
    OKGREEN = '\033[92m'
    WARNING = '\033[93m'
    FAIL = '\033[91m'
    ENDC = '\033[0m'
    BOLD = '\033[1m'


def print_header(text):
    print(f"\n{Colors.HEADER}{Colors.BOLD}{'='*70}{Colors.ENDC}")
    print(f"{Colors.HEADER}{Colors.BOLD}{text}{Colors.ENDC}")
    print(f"{Colors.HEADER}{Colors.BOLD}{'='*70}{Colors.ENDC}\n")


def print_success(text):
    print(f"{Colors.OKGREEN}‚úì {text}{Colors.ENDC}")


def print_error(text):
    print(f"{Colors.FAIL}‚úó {text}{Colors.ENDC}")


def print_warning(text):
    print(f"{Colors.WARNING}‚ö† {text}{Colors.ENDC}")


def print_info(text):
    print(f"{Colors.OKCYAN}‚Ñπ {text}{Colors.ENDC}")


def check_xray_config():
    """–ü—Ä–æ–≤–µ—Ä—è–µ—Ç –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏—é Xray –Ω–∞ –Ω–∞–ª–∏—á–∏–µ access –ª–æ–≥–æ–≤"""
    print_header("1. –ü—Ä–æ–≤–µ—Ä–∫–∞ –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏ Xray")
    
    config_path = Path("xray_config.json")
    if not config_path.exists():
        print_error(f"–ö–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–æ–Ω–Ω—ã–π —Ñ–∞–π–ª {config_path} –Ω–µ –Ω–∞–π–¥–µ–Ω")
        return False
    
    try:
        with open(config_path, 'r', encoding='utf-8') as f:
            config = json.load(f)
        
        print_success(f"–ö–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–æ–Ω–Ω—ã–π —Ñ–∞–π–ª –∑–∞–≥—Ä—É–∂–µ–Ω: {config_path}")
        
        # –ü—Ä–æ–≤–µ—Ä–∫–∞ —Å–µ–∫—Ü–∏–∏ log
        if 'log' not in config:
            print_error("–°–µ–∫—Ü–∏—è 'log' –æ—Ç—Å—É—Ç—Å—Ç–≤—É–µ—Ç –≤ –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏")
            return False
        
        log_config = config['log']
        print_info(f"–¢–µ–∫—É—â–∞—è –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏—è –ª–æ–≥–æ–≤: {json.dumps(log_config, indent=2)}")
        
        # –ü—Ä–æ–≤–µ—Ä–∫–∞ loglevel
        loglevel = log_config.get('loglevel', 'warning')
        print_info(f"–£—Ä–æ–≤–µ–Ω—å –ª–æ–≥–∏—Ä–æ–≤–∞–Ω–∏—è: {loglevel}")
        
        if loglevel in ['none', 'error']:
            print_warning(
                f"–£—Ä–æ–≤–µ–Ω—å –ª–æ–≥–∏—Ä–æ–≤–∞–Ω–∏—è '{loglevel}' —Å–ª–∏—à–∫–æ–º –Ω–∏–∑–∫–∏–π –¥–ª—è –æ—Ç—Å–ª–µ–∂–∏–≤–∞–Ω–∏—è –ø–æ–¥–∫–ª—é—á–µ–Ω–∏–π.\n"
                f"  –†–µ–∫–æ–º–µ–Ω–¥—É–µ—Ç—Å—è –∏—Å–ø–æ–ª—å–∑–æ–≤–∞—Ç—å 'warning' –∏–ª–∏ 'info'"
            )
        else:
            print_success(f"–£—Ä–æ–≤–µ–Ω—å –ª–æ–≥–∏—Ä–æ–≤–∞–Ω–∏—è '{loglevel}' –ø–æ–¥—Ö–æ–¥–∏—Ç")
        
        # –ü—Ä–æ–≤–µ—Ä–∫–∞ access –ª–æ–≥–æ–≤
        if 'access' not in log_config:
            print_error(
                "‚ùå –ü–†–û–ë–õ–ï–ú–ê –ù–ê–ô–î–ï–ù–ê: –û—Ç—Å—É—Ç—Å—Ç–≤—É–µ—Ç –Ω–∞—Å—Ç—Ä–æ–π–∫–∞ 'access' –≤ —Å–µ–∫—Ü–∏–∏ 'log'!\n"
                "   –ë–µ–∑ access –ª–æ–≥–æ–≤ Xray –ù–ï –∑–∞–ø–∏—Å—ã–≤–∞–µ—Ç –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é –æ –ø–æ–¥–∫–ª—é—á–µ–Ω–∏—è—Ö –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª–µ–π."
            )
            print_info("\nüìù –î–ª—è –∏—Å–ø—Ä–∞–≤–ª–µ–Ω–∏—è –¥–æ–±–∞–≤—å—Ç–µ –≤ –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏—é:")
            print(f"{Colors.OKBLUE}")
            print('  "log": {')
            print('    "loglevel": "warning",')
            print('    "access": "/tmp/xray-access.log"  // –∏–ª–∏ –ª—é–±–æ–π –¥—Ä—É–≥–æ–π –ø—É—Ç—å')
            print('  }')
            print(f"{Colors.ENDC}")
            return False
        else:
            access_log = log_config['access']
            print_success(f"Access –ª–æ–≥ –Ω–∞—Å—Ç—Ä–æ–µ–Ω: {access_log}")
            
            # –ü—Ä–æ–≤–µ—Ä–∫–∞ –¥–æ—Å—Ç—É–ø–Ω–æ—Å—Ç–∏ —Ñ–∞–π–ª–∞
            if access_log != "":
                access_path = Path(access_log)
                if access_path.exists():
                    print_success(f"–§–∞–π–ª access –ª–æ–≥–∞ —Å—É—â–µ—Å—Ç–≤—É–µ—Ç: {access_path}")
                    # –ü–æ–∫–∞–∑—ã–≤–∞–µ–º –ø–æ—Å–ª–µ–¥–Ω–∏–µ —Å—Ç—Ä–æ–∫–∏
                    try:
                        with open(access_path, 'r', encoding='utf-8', errors='ignore') as f:
                            lines = f.readlines()[-10:]
                            if lines:
                                print_info(f"\n–ü–æ—Å–ª–µ–¥–Ω–∏–µ {len(lines)} —Å—Ç—Ä–æ–∫ –∏–∑ access –ª–æ–≥–∞:")
                                for line in lines:
                                    print(f"  {line.rstrip()}")
                            else:
                                print_warning("–§–∞–π–ª access –ª–æ–≥–∞ –ø—É—Å—Ç–æ–π")
                    except Exception as e:
                        print_warning(f"–ù–µ —É–¥–∞–ª–æ—Å—å –ø—Ä–æ—á–∏—Ç–∞—Ç—å access –ª–æ–≥: {e}")
                else:
                    print_warning(f"–§–∞–π–ª access –ª–æ–≥–∞ –Ω–µ —Å—É—â–µ—Å—Ç–≤—É–µ—Ç: {access_path}")
            else:
                print_info("Access –ª–æ–≥ –Ω–∞–ø—Ä–∞–≤–ª–µ–Ω –≤ stdout/stderr")
        
        return True
        
    except json.JSONDecodeError as e:
        print_error(f"–û—à–∏–±–∫–∞ –ø–∞—Ä—Å–∏–Ω–≥–∞ JSON: {e}")
        return False
    except Exception as e:
        print_error(f"–û—à–∏–±–∫–∞ –ø—Ä–∏ —á—Ç–µ–Ω–∏–∏ –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏: {e}")
        return False


def check_access_log_format():
    """–ü—Ä–æ–≤–µ—Ä—è–µ—Ç —Ñ–æ—Ä–º–∞—Ç access –ª–æ–≥–æ–≤ –∏ —Ä–µ–≥—É–ª—è—Ä–Ω–æ–µ –≤—ã—Ä–∞–∂–µ–Ω–∏–µ"""
    print_header("2. –ü—Ä–æ–≤–µ—Ä–∫–∞ —Ñ–æ—Ä–º–∞—Ç–∞ access –ª–æ–≥–æ–≤")
    
    # –†–µ–≥—É–ª—è—Ä–Ω–æ–µ –≤—ã—Ä–∞–∂–µ–Ω–∏–µ –∏–∑ –∫–æ–¥–∞
    ACCESS_LOG_RE = re.compile(
        r"email[:\s]+(?P<email>[\w.\-@]+).*?(?:from|ip[:\s]|remote[:\s])\s*(?P<ip>[0-9a-fA-F:.\[\]]+)"
    )
    
    print_info("–†–µ–≥—É–ª—è—Ä–Ω–æ–µ –≤—ã—Ä–∞–∂–µ–Ω–∏–µ –¥–ª—è –ø–∞—Ä—Å–∏–Ω–≥–∞ –ª–æ–≥–æ–≤:")
    print(f"  {ACCESS_LOG_RE.pattern}")
    
    # –ü—Ä–∏–º–µ—Ä—ã —Ñ–æ—Ä–º–∞—Ç–æ–≤ –ª–æ–≥–æ–≤ Xray
    test_logs = [
        "2024/01/01 12:00:00 [Info] [123456789] email: 123.username from 192.168.1.1:12345 accepted tcp:example.com:443",
        "2024/01/01 12:00:00 email: 123.testuser ip: 10.0.0.1",
        "[Info] user: 123.john remote: 2001:db8::1",
        "accepted 123.user@domain from 172.16.0.1",
    ]
    
    print_info("\n–¢–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏–µ —Ä–µ–≥—É–ª—è—Ä–Ω–æ–≥–æ –≤—ã—Ä–∞–∂–µ–Ω–∏—è –Ω–∞ –ø—Ä–∏–º–µ—Ä–∞—Ö:")
    matches_found = False
    for log in test_logs:
        match = ACCESS_LOG_RE.search(log)
        if match:
            print_success(f"‚úì –°–æ–≤–ø–∞–¥–µ–Ω–∏–µ –Ω–∞–π–¥–µ–Ω–æ:")
            print(f"    –õ–æ–≥: {log}")
            print(f"    Email: {match.group('email')}, IP: {match.group('ip')}")
            matches_found = True
        else:
            print_warning(f"‚úó –°–æ–≤–ø–∞–¥–µ–Ω–∏–µ –Ω–µ –Ω–∞–π–¥–µ–Ω–æ: {log[:80]}...")
    
    if not matches_found:
        print_error(
            "\n–†–µ–≥—É–ª—è—Ä–Ω–æ–µ –≤—ã—Ä–∞–∂–µ–Ω–∏–µ –Ω–µ —Å–æ–≤–ø–∞–¥–∞–µ—Ç –Ω–∏ —Å –æ–¥–Ω–∏–º –∏–∑ —Ç–µ—Å—Ç–æ–≤—ã—Ö —Ñ–æ—Ä–º–∞—Ç–æ–≤!\n"
            "–≠—Ç–æ –º–æ–∂–µ—Ç –æ–∑–Ω–∞—á–∞—Ç—å, —á—Ç–æ —Ñ–æ—Ä–º–∞—Ç –ª–æ–≥–æ–≤ Xray –∏–∑–º–µ–Ω–∏–ª—Å—è."
        )
    
    print_info("\nüìù –¢–∏–ø–∏—á–Ω—ã–µ —Ñ–æ—Ä–º–∞—Ç—ã access –ª–æ–≥–æ–≤ Xray:")
    print("  - V2Ray/Xray —Å—Ç–∞—Ä—ã–π —Ñ–æ—Ä–º–∞—Ç: 'email: 123.username from 192.168.1.1:12345'")
    print("  - Xray –Ω–æ–≤—ã–π —Ñ–æ—Ä–º–∞—Ç –º–æ–∂–µ—Ç –æ—Ç–ª–∏—á–∞—Ç—å—Å—è")
    print("\n  –ü—Ä–æ–≤–µ—Ä—å—Ç–µ —Ä–µ–∞–ª—å–Ω—ã–µ –ª–æ–≥–∏ Xray –¥–ª—è –≤–∞—à–µ–π –≤–µ—Ä—Å–∏–∏!")


def check_xray_runner():
    """–ü—Ä–æ–≤–µ—Ä—è–µ—Ç –ª–æ–≥–∏–∫—É –æ–±—Ä–∞–±–æ—Ç–∫–∏ –ª–æ–≥–æ–≤ –≤ _runner.py"""
    print_header("3. –ü—Ä–æ–≤–µ—Ä–∫–∞ –ª–æ–≥–∏–∫–∏ –æ–±—Ä–∞–±–æ—Ç–∫–∏ –ª–æ–≥–æ–≤ –≤ –∫–æ–¥–µ")
    
    runner_path = Path("marznode/backends/xray/_runner.py")
    if not runner_path.exists():
        print_error(f"–§–∞–π–ª {runner_path} –Ω–µ –Ω–∞–π–¥–µ–Ω")
        return
    
    try:
        with open(runner_path, 'r', encoding='utf-8') as f:
            content = f.read()
        
        # –ü—Ä–æ–≤–µ—Ä–∫–∞ –Ω–∞–ª–∏—á–∏—è _handle_log_line
        if '_handle_log_line' in content:
            print_success("–ú–µ—Ç–æ–¥ _handle_log_line –Ω–∞–π–¥–µ–Ω –≤ –∫–æ–¥–µ")
        else:
            print_error("–ú–µ—Ç–æ–¥ _handle_log_line –Ω–µ –Ω–∞–π–¥–µ–Ω!")
        
        # –ü—Ä–æ–≤–µ—Ä–∫–∞ –Ω–∞–ª–∏—á–∏—è _last_meta
        if '_last_meta' in content:
            print_success("–°–ª–æ–≤–∞—Ä—å _last_meta –¥–ª—è —Ö—Ä–∞–Ω–µ–Ω–∏—è –º–µ—Ç–∞–¥–∞–Ω–Ω—ã—Ö –Ω–∞–π–¥–µ–Ω")
        else:
            print_error("–°–ª–æ–≤–∞—Ä—å _last_meta –Ω–µ –Ω–∞–π–¥–µ–Ω!")
        
        # –ü—Ä–æ–≤–µ—Ä–∫–∞ –≤—ã–∑–æ–≤–∞ _handle_log_line
        if 'self._handle_log_line(line)' in content:
            print_success("–ú–µ—Ç–æ–¥ _handle_log_line –≤—ã–∑—ã–≤–∞–µ—Ç—Å—è –ø—Ä–∏ –æ–±—Ä–∞–±–æ—Ç–∫–µ –ª–æ–≥–æ–≤")
        else:
            print_warning("–í—ã–∑–æ–≤ _handle_log_line –Ω–µ –Ω–∞–π–¥–µ–Ω –≤ __capture_process_logs")
        
    except Exception as e:
        print_error(f"–û—à–∏–±–∫–∞ –ø—Ä–∏ —á—Ç–µ–Ω–∏–∏ —Ñ–∞–π–ª–∞: {e}")


def check_backend_integration():
    """–ü—Ä–æ–≤–µ—Ä—è–µ—Ç –∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏—é —Å –±—ç–∫–µ–Ω–¥–æ–º"""
    print_header("4. –ü—Ä–æ–≤–µ—Ä–∫–∞ –∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏–∏ —Å backend")
    
    backend_path = Path("marznode/backends/xray/xray_backend.py")
    if not backend_path.exists():
        print_error(f"–§–∞–π–ª {backend_path} –Ω–µ –Ω–∞–π–¥–µ–Ω")
        return
    
    try:
        with open(backend_path, 'r', encoding='utf-8') as f:
            content = f.read()
        
        # –ü—Ä–æ–≤–µ—Ä–∫–∞ –º–µ—Ç–æ–¥–∞ get_users_meta
        if 'def get_users_meta' in content or 'async def get_users_meta' in content:
            print_success("–ú–µ—Ç–æ–¥ get_users_meta –Ω–∞–π–¥–µ–Ω –≤ XrayBackend")
        else:
            print_error("–ú–µ—Ç–æ–¥ get_users_meta –Ω–µ –Ω–∞–π–¥–µ–Ω –≤ XrayBackend!")
        
        # –ü—Ä–æ–≤–µ—Ä–∫–∞ –≤—ã–∑–æ–≤–∞ get_last_meta
        if 'get_last_meta' in content:
            print_success("–í—ã–∑–æ–≤ get_last_meta() –¥–ª—è –ø–æ–ª—É—á–µ–Ω–∏—è –º–µ—Ç–∞–¥–∞–Ω–Ω—ã—Ö –∏–∑ –ª–æ–≥–æ–≤ –Ω–∞–π–¥–µ–Ω")
        else:
            print_error("–í—ã–∑–æ–≤ get_last_meta() –Ω–µ –Ω–∞–π–¥–µ–Ω!")
        
    except Exception as e:
        print_error(f"–û—à–∏–±–∫–∞ –ø—Ä–∏ —á—Ç–µ–Ω–∏–∏ —Ñ–∞–π–ª–∞: {e}")


def check_service_integration():
    """–ü—Ä–æ–≤–µ—Ä—è–µ—Ç –∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏—é —Å–æ —Å–ª—É–∂–±–æ–π"""
    print_header("5. –ü—Ä–æ–≤–µ—Ä–∫–∞ –∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏–∏ —Å gRPC —Å–µ—Ä–≤–∏—Å–æ–º")
    
    service_path = Path("marznode/service/service.py")
    if not service_path.exists():
        print_error(f"–§–∞–π–ª {service_path} –Ω–µ –Ω–∞–π–¥–µ–Ω")
        return
    
    try:
        with open(service_path, 'r', encoding='utf-8') as f:
            content = f.read()
        
        # –ü—Ä–æ–≤–µ—Ä–∫–∞ FetchUsersStats
        if 'def FetchUsersStats' in content or 'async def FetchUsersStats' in content:
            print_success("–ú–µ—Ç–æ–¥ FetchUsersStats –Ω–∞–π–¥–µ–Ω –≤ MarzService")
        else:
            print_error("–ú–µ—Ç–æ–¥ FetchUsersStats –Ω–µ –Ω–∞–π–¥–µ–Ω!")
        
        # –ü—Ä–æ–≤–µ—Ä–∫–∞ –≤—ã–∑–æ–≤–∞ get_users_meta
        if 'get_users_meta' in content:
            print_success("–í—ã–∑–æ–≤ get_users_meta() –≤ FetchUsersStats –Ω–∞–π–¥–µ–Ω")
        else:
            print_warning("–í—ã–∑–æ–≤ get_users_meta() –Ω–µ –Ω–∞–π–¥–µ–Ω –≤ FetchUsersStats")
        
        # –ü—Ä–æ–≤–µ—Ä–∫–∞ remote_ip –≤ –æ—Ç–≤–µ—Ç–µ
        if 'remote_ip' in content:
            print_success("–ü–æ–ª–µ remote_ip –∏—Å–ø–æ–ª—å–∑—É–µ—Ç—Å—è –≤ –æ—Ç–≤–µ—Ç–µ UserStats")
        else:
            print_warning("–ü–æ–ª–µ remote_ip –Ω–µ –Ω–∞–π–¥–µ–Ω–æ –≤ –∫–æ–¥–µ")
        
    except Exception as e:
        print_error(f"–û—à–∏–±–∫–∞ –ø—Ä–∏ —á—Ç–µ–Ω–∏–∏ —Ñ–∞–π–ª–∞: {e}")


def provide_recommendations():
    """–ü—Ä–µ–¥–æ—Å—Ç–∞–≤–ª—è–µ—Ç —Ä–µ–∫–æ–º–µ–Ω–¥–∞—Ü–∏–∏ –ø–æ –∏—Å–ø—Ä–∞–≤–ª–µ–Ω–∏—é"""
    print_header("üìã –†–µ–∫–æ–º–µ–Ω–¥–∞—Ü–∏–∏ –ø–æ –∏—Å–ø—Ä–∞–≤–ª–µ–Ω–∏—é")
    
    print(f"{Colors.BOLD}–ï—Å–ª–∏ —É—Å—Ç—Ä–æ–π—Å—Ç–≤–∞ –Ω–µ –æ—Ç—Å–ª–µ–∂–∏–≤–∞—é—Ç—Å—è, –≤—ã–ø–æ–ª–Ω–∏—Ç–µ —Å–ª–µ–¥—É—é—â–∏–µ —à–∞–≥–∏:{Colors.ENDC}\n")
    
    print(f"{Colors.OKBLUE}1. –ù–∞—Å—Ç—Ä–æ–π—Ç–µ access –ª–æ–≥–∏ –≤ –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏ Xray:{Colors.ENDC}")
    print('   –î–æ–±–∞–≤—å—Ç–µ –∏–ª–∏ –∏–∑–º–µ–Ω–∏—Ç–µ —Å–µ–∫—Ü–∏—é "log" –≤ xray_config.json:')
    print('   {')
    print('     "log": {')
    print('       "loglevel": "warning",')
    print('       "access": "/var/log/xray/access.log"')
    print('     }')
    print('   }')
    
    print(f"\n{Colors.OKBLUE}2. –£–±–µ–¥–∏—Ç–µ—Å—å, —á—Ç–æ Xray –∏–º–µ–µ—Ç –ø—Ä–∞–≤–∞ –Ω–∞ –∑–∞–ø–∏—Å—å –ª–æ–≥–æ–≤:{Colors.ENDC}")
    print('   sudo mkdir -p /var/log/xray')
    print('   sudo chown -R $(whoami) /var/log/xray')
    
    print(f"\n{Colors.OKBLUE}3. –ü–µ—Ä–µ–∑–∞–ø—É—Å—Ç–∏—Ç–µ marznode –ø–æ—Å–ª–µ –∏–∑–º–µ–Ω–µ–Ω–∏—è –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏:{Colors.ENDC}")
    print('   # –ü–µ—Ä–µ–∑–∞–ø—É—Å–∫ —á–µ—Ä–µ–∑ docker-compose')
    print('   docker-compose restart')
    print('   # –∏–ª–∏')
    print('   systemctl restart marznode')
    
    print(f"\n{Colors.OKBLUE}4. –ü—Ä–æ–≤–µ—Ä—å—Ç–µ –ª–æ–≥–∏ –ø–æ—Å–ª–µ –ø–æ–¥–∫–ª—é—á–µ–Ω–∏—è –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è:{Colors.ENDC}")
    print('   tail -f /var/log/xray/access.log')
    print('   # –í—ã –¥–æ–ª–∂–Ω—ã —É–≤–∏–¥–µ—Ç—å —Å—Ç—Ä–æ–∫–∏ —Å email –∏ IP –∞–¥—Ä–µ—Å–∞–º–∏')
    
    print(f"\n{Colors.OKBLUE}5. –ü—Ä–æ–≤–µ—Ä—å—Ç–µ —Ñ–æ—Ä–º–∞—Ç –ª–æ–≥–æ–≤:{Colors.ENDC}")
    print('   –õ–æ–≥–∏ –¥–æ–ª–∂–Ω—ã —Å–æ–¥–µ—Ä–∂–∞—Ç—å –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é –≤–∏–¥–∞:')
    print('   "email: 123.username from 192.168.1.1:12345"')
    print('   –ï—Å–ª–∏ —Ñ–æ—Ä–º–∞—Ç –¥—Ä—É–≥–æ–π, –Ω—É–∂–Ω–æ –æ–±–Ω–æ–≤–∏—Ç—å —Ä–µ–≥—É–ª—è—Ä–Ω–æ–µ –≤—ã—Ä–∞–∂–µ–Ω–∏–µ –≤ _runner.py')
    
    print(f"\n{Colors.OKBLUE}6. –ü—Ä–æ–≤–µ—Ä—å—Ç–µ –≤–µ—Ä—Å–∏—é Xray:{Colors.ENDC}")
    print('   xray version')
    print('   # –§–æ—Ä–º–∞—Ç –ª–æ–≥–æ–≤ –º–æ–∂–µ—Ç –æ—Ç–ª–∏—á–∞—Ç—å—Å—è –≤ —Ä–∞–∑–Ω—ã—Ö –≤–µ—Ä—Å–∏—è—Ö')
    
    print(f"\n{Colors.WARNING}7. –î–ª—è –æ—Ç–ª–∞–¥–∫–∏ –≤–∫–ª—é—á–∏—Ç–µ DEBUG —Ä–µ–∂–∏–º:{Colors.ENDC}")
    print('   –í config.py –∏–ª–∏ —á–µ—Ä–µ–∑ –ø–µ—Ä–µ–º–µ–Ω–Ω—É—é –æ–∫—Ä—É–∂–µ–Ω–∏—è:')
    print('   export DEBUG=true')


def main():
    print(f"{Colors.BOLD}{Colors.HEADER}")
    print("=" * 70)
    print("  –î–∏–∞–≥–Ω–æ—Å—Ç–∏–∫–∞ –æ—Ç—Å–ª–µ–∂–∏–≤–∞–Ω–∏—è —É—Å—Ç—Ä–æ–π—Å—Ç–≤ –≤ marznode")
    print("=" * 70)
    print(f"{Colors.ENDC}")
    
    print_info("–≠—Ç–æ—Ç —Å–∫—Ä–∏–ø—Ç –ø—Ä–æ–≤–µ—Ä–∏—Ç –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏—é –∏ –∫–æ–¥ –¥–ª—è –≤—ã—è–≤–ª–µ–Ω–∏—è –ø—Ä–æ–±–ª–µ–º")
    print_info("—Å –æ—Ç—Å–ª–µ–∂–∏–≤–∞–Ω–∏–µ–º IP –∞–¥—Ä–µ—Å–æ–≤ –∏ —É—Å—Ç—Ä–æ–π—Å—Ç–≤ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª–µ–π.\n")
    
    # –í—ã–ø–æ–ª–Ω–µ–Ω–∏–µ –ø—Ä–æ–≤–µ—Ä–æ–∫
    config_ok = check_xray_config()
    check_access_log_format()
    check_xray_runner()
    check_backend_integration()
    check_service_integration()
    provide_recommendations()
    
    # –ò—Ç–æ–≥–æ–≤–æ–µ —Ä–µ–∑—é–º–µ
    print_header("üìä –ò—Ç–æ–≥–æ–≤–æ–µ —Ä–µ–∑—é–º–µ")
    
    if not config_ok:
        print_error(
            "–ì–õ–ê–í–ù–ê–Ø –ü–†–û–ë–õ–ï–ú–ê: Access –ª–æ–≥–∏ –Ω–µ –Ω–∞—Å—Ç—Ä–æ–µ–Ω—ã –≤ –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏ Xray!\n"
            "–ë–µ–∑ –Ω–∏—Ö –æ—Ç—Å–ª–µ–∂–∏–≤–∞–Ω–∏–µ —É—Å—Ç—Ä–æ–π—Å—Ç–≤ –Ω–µ–≤–æ–∑–º–æ–∂–Ω–æ.\n"
            "–°–ª–µ–¥—É–π—Ç–µ —Ä–µ–∫–æ–º–µ–Ω–¥–∞—Ü–∏—è–º –≤—ã—à–µ –¥–ª—è –∏—Å–ø—Ä–∞–≤–ª–µ–Ω–∏—è."
        )
    else:
        print_success(
            "–ö–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏—è –≤—ã–≥–ª—è–¥–∏—Ç –ø—Ä–∞–≤–∏–ª—å–Ω–æ.\n"
            "–ï—Å–ª–∏ —É—Å—Ç—Ä–æ–π—Å—Ç–≤–∞ –≤—Å–µ –µ—â–µ –Ω–µ –æ—Ç—Å–ª–µ–∂–∏–≤–∞—é—Ç—Å—è, –ø—Ä–æ–≤–µ—Ä—å—Ç–µ:\n"
            "  1. –†–µ–∞–ª—å–Ω–æ–µ —Å–æ–¥–µ—Ä–∂–∏–º–æ–µ access –ª–æ–≥–æ–≤ –ø–æ—Å–ª–µ –ø–æ–¥–∫–ª—é—á–µ–Ω–∏—è\n"
            "  2. –°–æ–æ—Ç–≤–µ—Ç—Å—Ç–≤–∏–µ —Ñ–æ—Ä–º–∞—Ç–∞ –ª–æ–≥–æ–≤ —Ä–µ–≥—É–ª—è—Ä–Ω–æ–º—É –≤—ã—Ä–∞–∂–µ–Ω–∏—é\n"
            "  3. –ü—Ä–∞–≤–∞ –¥–æ—Å—Ç—É–ø–∞ –∫ —Ñ–∞–π–ª–∞–º –ª–æ–≥–æ–≤"
        )


if __name__ == "__main__":
    main()

